Adds leaflet examples

--- a/index.html
+++ b/index.html
@@ -113,74 +113,19 @@
     </section>
 
     <section>
-        <h2 style="margin-top:-60px">Base layers</h2>
+        <h2 style="margin-top:-60px">Create a map</h2>
         <iframe class="bin" src="http://jsbin.com/oJOkOso/1"></iframe>
         <a class="jsbin-embed" href="http://jsbin.com/oJOkOso/1/embed?output">JS Bin</a>
     </section>
 
-    <section>
-        <h2 style="margin-top:-60px">Better base layers</h2>
-        <a class="jsbin-embed" href="http://jsbin.com/oJOkOso/1/embed?output">JS Bin</a>
-    </section>    
-
     <!-- markers at point. Markers on click (interaction) -->
-    <section>
-        <h2 style="margin-top:-60px">Markers</h2>
-        <a class="jsbin-embed" href="http://jsbin.com/oJOkOso/1/embed?output">JS Bin</a>
-    </section>
 
-    <section>
-        <!-- markers where we are -->
-        <h2 style="margin-top:-60px">Geolocation</h2>
-        <a class="jsbin-embed" href="http://jsbin.com/oJOkOso/1/embed?output">JS Bin</a>
-    </section>
+    <!-- markers where we are -->
 
-    <section>
-        <!-- Polygons vs tiles -->
-        <h2 style="margin-top:-60px">Raster or Vector</h2>
-        <a class="jsbin-embed" href="http://jsbin.com/oJOkOso/1/embed?output">JS Bin</a>
-    </section>
-
-    <section>
-        <!-- Polygons on tiles -->
-        <h2 style="margin-top:-60px">BOTH!</h2>
-        <a class="jsbin-embed" href="http://jsbin.com/oJOkOso/1/embed?output">JS Bin</a>
-    </section>
-
-    <section>
-        <!-- geojson for the UK -->
-        <h2 style="margin-top:-60px">Complicated shapes</h2>
-        <a class="jsbin-embed" href="http://jsbin.com/oJOkOso/1/embed?output">JS Bin</a>
-    </section>
-
-    <section>
-        <!-- geojson for the UK -->
-        <h2 style="margin-top:-60px">Complicated shapes</h2>
-        <a class="jsbin-embed" href="http://jsbin.com/oJOkOso/1/embed?output">JS Bin</a>
-    </section>
- -->
-
-    <!-- <section style="background:url(https://raw.github.com/rwaldron/johnny-five/master/assets/sgier-johnny-five.png) no-repeat; background-size:cover">
-        <h1>NodeBots are robots powered by JS</h1>
-    </section>
-
-    <section style="background:url(img/nodebot.jpg) no-repeat; background-size:cover">
-        <div class="hi-viz">
-        <p>See:</p>
-        <ul>
-            <li><a href="https://github.com/rwaldron/johnny-five">johnny-five</a> - The jQuery of robotics</li>
-            <li><a href="https://github.com/voodootikigod/node-serialport">node-serialport</a> - Rx/Tx your brains out</li>
-        </ul>
-        </div>
-    </section>
- -->
+    <!-- geojson for the UK -->
 
     <section>
         <h1>(╯°□°）╯︵ ┻━┻</h1>
-    </section>
-
-    <section style="background:black">
-        <h1 style="text-align:center">Fin</h1>
     </section>
 
     <section style="background-image:url(img/jolly-roger.gif);background-size:cover">
