--- a/examples/01-create-a-map/index.html
+++ b/examples/01-create-a-map/index.html
@@ -18,13 +18,13 @@ html, body, #leaflet{
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>  
 
   <script>
-  var map = L.map('leaflet').setView([51.505, -0.09], 15);
+  // var map = L.map('leaflet').setView([51.505, -0.09], 15);
   
-  var openstreetmap = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-  var toner = L.tileLayer('http://{s}.tile.stamen.com/toner/{z}/{x}/{y}.jpg');
-  var watercolor = L.tileLayer('http://{s}.tile.stamen.com/watercolor/{z}/{x}/{y}.jpg');
+  // var osm = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+  // var toner = L.tileLayer('http://{s}.tile.stamen.com/toner/{z}/{x}/{y}.jpg');
+  // var watercolor = L.tileLayer('http://{s}.tile.stamen.com/watercolor/{z}/{x}/{y}.jpg');
 
-  map.addLayer(toner);
+  // map.addLayer(osm);
   </script>
 </body>
 </html>
